fix ShiftCard actions location

--- a/src/app/_elements/shift-table/shift-card/shift-card.component.scss
+++ b/src/app/_elements/shift-table/shift-card/shift-card.component.scss
@@ -2,9 +2,11 @@
 
 .shift-card {
   width: 242px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 
   .mat-card-header {
-
     .mat-card-title {
       display: flex;
       flex-direction: column;
@@ -21,14 +23,16 @@
     gap: 4px;
     flex-wrap: wrap;
 
-    .deliver{
+    .deliver {
       background-color: bisque;
     }
   }
 
   .mat-card-actions {
     display: flex;
+    flex-grow: 1;
     justify-content: flex-end;
+    align-items: flex-end;
 
     .has-statistic {
       color: green;
